actually fix the overflow issue with the activity controls

--- a/client/sass/app/nav.scss
+++ b/client/sass/app/nav.scss
@@ -77,7 +77,6 @@
   position: absolute;
   width: 100%;
   margin-top: $topbar-height;
-  overflow-y: visible;
 
   & > .inner {
     @include grid-column(12, $collapse: true);
@@ -133,14 +132,6 @@
         }
       }
 
-      .content {
-        font-weight: 200;
-
-        // a {
-        //   color: $primary-color;
-        // }
-      }
-
       & > li { 
         @include button-group-style(); 
 
@@ -148,8 +139,13 @@
       }
 
       .f-dropdown.content {
-        padding: rem-calc(5);
-        max-width: 380px;
+        display: none;
+
+        &.open {
+          padding: rem-calc(5);
+          max-width: 380px;
+          display: inherit;
+        }
       }
     }
 
